@@ -6,6 +6,8 @@ import (
 	"testing"
 
 	"github.com/stretchr/testify/assert"
+
+	"github.com/elastic/beats/libbeat/common"
 )
 
 func TestNumberOfRoutingShards(t *testing.T) {
@@ -53,4 +55,107 @@ func TestNumberOfRoutingShardsOverwrite(t *testing.T) {
 	assert.NoError(t, err)
 
 	assert.Equal(t, 5, shards.(int))
+}
+
+func TestAppendFields(t *testing.T) {
+	tests := []struct {
+		fields       common.Fields
+		appendFields common.Fields
+		error        bool
+	}{
+		{
+			fields: common.Fields{
+				common.Field{
+					Name: "a",
+					Fields: common.Fields{
+						common.Field{
+							Name: "b",
+						},
+					},
+				},
+			},
+			appendFields: common.Fields{
+				common.Field{
+					Name: "a",
+					Fields: common.Fields{
+						common.Field{
+							Name: "c",
+						},
+					},
+				},
+			},
+			error: false,
+		},
+		{
+			fields: common.Fields{
+				common.Field{
+					Name: "a",
+					Fields: common.Fields{
+						common.Field{
+							Name: "b",
+						},
+						common.Field{
+							Name: "c",
+						},
+					},
+				},
+			},
+			appendFields: common.Fields{
+				common.Field{
+					Name: "a",
+					Fields: common.Fields{
+						common.Field{
+							Name: "c",
+						},
+					},
+				},
+			},
+			error: true,
+		},
+		{
+			fields: common.Fields{
+				common.Field{
+					Name: "a",
+				},
+			},
+			appendFields: common.Fields{
+				common.Field{
+					Name: "a",
+					Fields: common.Fields{
+						common.Field{
+							Name: "c",
+						},
+					},
+				},
+			},
+			error: true,
+		},
+		{
+			fields: common.Fields{
+				common.Field{
+					Name: "a",
+					Fields: common.Fields{
+						common.Field{
+							Name: "c",
+						},
+					},
+				},
+			},
+			appendFields: common.Fields{
+				common.Field{
+					Name: "a",
+				},
+			},
+			error: true,
+		},
+	}
+
+	for _, test := range tests {
+		_, err := appendFields(test.fields, test.appendFields)
+		if test.error {
+			assert.Error(t, err)
+		} else {
+			assert.NoError(t, err)
+		}
+	}
 }
